fix: edit css to prevent margin collapse

--- a/styles/login-signup.css
+++ b/styles/login-signup.css
@@ -3,10 +3,7 @@
 .header {
     display: flex;
     justify-content: center;
-}
-
-.header__logo {
-    margin: 60px 0 40px;
+    padding-top: 60px;
 }
 
 .login__container {
@@ -20,20 +17,21 @@
     display: flex;
     flex-direction: column;
     row-gap: 24px;
+    margin-top: 40px;
 }
 
 .form__label {
     position: relative;
     display: flex;
     flex-direction: column;
-    font-size: 18px;
-    font-weight: 700;
-    line-height: 21.48px;
     row-gap: 16px;
 }
 
 .label__name {
     width: fit-content;
+    font-size: 18px;
+    font-weight: 700;
+    line-height: 21.48px;
 }
 
 .input__wrapper {
@@ -99,12 +97,19 @@
 .check__link {
     text-decoration: underline;
 }
-
+@media (min-width: 768px) and (max-width: 1199px) {
+    .header {
+        padding-top: 48px;
+    }
+}
 @media (min-width: 375px) and (max-width: 767px) {
+    .header {
+        padding-top: 24px;
+    }
+
     .header__logo {
         width: 198px;
         height: 66px;
-        margin: 24px 0 24px;
     }
 
     .login__form {
